--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: yuki-tangolevel
+    name: yahoo-yuki-ziziidesu
     env: python
     region: Oregon
     plan: free
